--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:insert="~{layout:: head}"> />
+    <title></title>
 <body>
 
 <h1>My First Heading</h1>
