--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -12,4 +12,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
+<body>
+    <!-- Navigation -->
+    <nav th:fragment="nav" class="navbar">
+        <div class="container">
+            <a class="navbar-brand" href="/">
+                <i class="fas fa-tasks"></i>
+                TodoMaster
+            </a>
+        </div>
+    </nav>
+</body>
+
 </html>
