--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -62,17 +62,17 @@
       padding: 2rem;
     }
 
-    /* Change this so that the back icon is there. Where title? */
-    /* Header Section */
-    .header-section {
-        flex-direction: column;
-            gap: 1rem;
-            text-align: center;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 2rem;
-    }
+/* Change this so that the back icon is there. Where title? */
+/* Header Section */
+.header-section {
+    flex-direction: row;
+    gap: 1rem;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
+}
 
     .header-title {
       font-size: 1.875rem;
