--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -14,6 +14,7 @@
     <script th:src="@{/js/utils.js}"></script>
 </head>
 
+<div th:fragment="container" class="container main-container"></div>
 <body>
     <!-- Navigation -->
     <nav th:fragment="nav" class="navbar">
@@ -24,6 +25,7 @@
             </a>
         </div>
     </nav>
+
 
     <!-- Expandable floating action button Menu -->
     <div th:fragment="fab" class="fab-menu">
