--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -3,7 +3,7 @@
 <head th:insert="~{layout :: head}"></head>
 <body>
 <!-- Navigation -->
-<!--<nav th:insert="~{layout :: nav}"></nav>-->
+<nav th:insert="~{layout :: nav}"></nav>
 
 <!-- Main Content -->
 <div class="container">
