--- a/src/main/resources/templates/pages/todos/new.html
+++ b/src/main/resources/templates/pages/todos/new.html
@@ -8,7 +8,7 @@
   <div class="main-container">
     <div class="header-section">
       <h1 class="header-title">
-        <a th:href="@{/templates/pages/lists/{id}(id=${todoList.id})}" class="btn btn-outline-secondary">
+        <a th:href="@{/lists/{id}(id=${todoList.id})}" class="btn btn-outline-secondary">
           <i class="fas fa-arrow-left"></i>
           Back
         </a>
@@ -16,7 +16,7 @@
       </h1>
     </div>
 
-    <form th:action="@{/templates/pages/lists/{listId}/todos(listId=${todoList.id})}" th:object="${newTodo}" method="post">
+    <form th:action="@{/lists/{listId}/todos(listId=${todoList.id})}" th:object="${newTodo}" method="post">
       <div class="form-group">
         <label for="todoDescription" class="form-label">Description</label>
         <input type="text"
@@ -28,7 +28,7 @@
                required>
       </div>
       <div class="form-actions" style="margin-top: 1rem; display: flex; gap: 1rem;">
-        <a th:href="@{/templates/pages/lists/{id}(id=${todoList.id})}" class="btn btn-secondary">Cancel</a>
+        <a th:href="@{/lists/{id}(id=${todoList.id})}" class="btn btn-secondary">Cancel</a>
         <button type="submit" class="btn btn-primary">
           <i class="fas fa-plus"></i>
           Add Todo
